force-app/main/default/objects/FS_OD_Settings__c/fields/Flex_Setting_1__c.field-meta.xml
<CustomField>
    <fullName>Flex_Setting_1__c</fullName>
    <label>Flex Setting 1</label>
    <length>128</length>
    <type>Text</type>
</CustomField>