force-app/main/default/objects/FS_OD_Settings__c/fields/Flex_Setting_1_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Flex_Setting_1_Updated_On__c</fullName>
    <label>Flex Setting 1 Updated On</label>
    <type>DateTime</type>
</CustomField>