force-app/main/default/objects/FS_OD_Settings__c/fields/Flex_Setting_2_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Flex_Setting_2_Updated_By__c</fullName>
    <label>Flex Setting 2 Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>