force-app/main/default/objects/FS_OD_Settings__c/fields/Flex_Setting_2_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Flex_Setting_2_Updated_On__c</fullName>
    <label>Flex Setting 2 Updated On</label>
    <type>DateTime</type>
</CustomField>