force-app/main/default/objects/FS_OD_Settings__c/fields/Flex_Setting_2_Verified__c.field-meta.xml
<CustomField>
    <fullName>Flex_Setting_2_Verified__c</fullName>
    <label>Flex Setting 2 Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>