force-app/main/default/objects/FS_OD_Settings__c/fields/FS_Agitate_OffTime_Seconds__c.field-meta.xml
<CustomField>
    <fullName>FS_Agitate_OffTime_Seconds__c</fullName>
    <defaultValue>120</defaultValue>
    <description>Agitate Off Time Seconds</description>
    <label>Agitate Off Time (s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>