force-app/main/default/objects/FS_OD_Settings__c/fields/FS_Agitate_OnTime_Seconds__c.field-meta.xml
<CustomField>
    <fullName>FS_Agitate_OnTime_Seconds__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Agitate OnTime Seconds</description>
    <label>Agitate On Time (s)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>