force-app/main/default/objects/FS_OD_Settings__c/fields/FS_Agitate_Threshold_OZ__c.field-meta.xml
<CustomField>
    <fullName>FS_Agitate_Threshold_OZ__c</fullName>
    <defaultValue>64</defaultValue>
    <description>Agitate Threshold OZ</description>
    <label>Agitate Threshold (Oz)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>