force-app/main/default/objects/FS_OD_Settings__c/fields/FS_Calorie_Display_Enable__c.field-meta.xml
<CustomField>
    <fullName>FS_Calorie_Display_Enable__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>Calorie Display Enable</description>
    <label>Caloric Display Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>