force-app/main/default/objects/FS_OD_Settings__c/fields/FS_DMVerbosity__c.field-meta.xml
<CustomField>
    <fullName>FS_DMVerbosity__c</fullName>
    <label>DMVerbosity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Informational</fullName>
            </value>
            <value>
                <fullName>Debug</fullName>
            </value>
            <value>
                <fullName>Default</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>