force-app/main/default/objects/FS_OD_Settings__c/fields/FS_DMVerbosity_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>FS_DMVerbosity_Updated_By__c</fullName>
    <label>DMVerbosity Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>