force-app/main/default/objects/FS_OD_Settings__c/fields/FS_DMVerbosity_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>FS_DMVerbosity_Updated_On__c</fullName>
    <label>DMVerbosity Updated On</label>
    <type>DateTime</type>
</CustomField>