force-app/main/default/objects/FS_OD_Settings__c/fields/FS_DMVerbosityExpiration__c.field-meta.xml
<CustomField>
    <fullName>FS_DMVerbosityExpiration__c</fullName>
    <label>DMVerbosityExpiration</label>
    <type>DateTime</type>
</CustomField>