force-app/main/default/objects/FS_OD_Settings__c/fields/FS_DMVerbosityExpiration_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>FS_DMVerbosityExpiration_Updated_By__c</fullName>
    <label>DMVerbosityExpiration Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>