force-app/main/default/objects/FS_OD_Settings__c/fields/FS_Do_Not_Update_Content__c.field-meta.xml
<CustomField>
    <fullName>FS_Do_Not_Update_Content__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>Do Not Update Content</description>
    <label>Do Not Update Bundle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>