force-app/main/default/objects/FS_OD_Settings__c/fields/FS_Do_Not_Update_CUI__c.field-meta.xml
<CustomField>
    <fullName>FS_Do_Not_Update_CUI__c</fullName>
    <label>Do Not Update CUI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>