force-app/main/default/objects/FS_OD_Settings__c/fields/FS_Do_Not_Update_CUI_Last_Uptd_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Do_Not_Update_CUI_Last_Uptd_By__c</fullName>
    <label>Do Not Update CUI Last Uptd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>