force-app/main/default/objects/FS_OD_Settings__c/fields/FS_Do_Not_Update_CUI_Uptd_On__c.field-meta.xml
<CustomField>
    <fullName>FS_Do_Not_Update_CUI_Uptd_On__c</fullName>
    <label>Do Not Update CUI Updt On</label>
    <type>DateTime</type>
</CustomField>