force-app/main/default/objects/FS_OD_Settings__c/fields/FS_Force_Restore__c.field-meta.xml
<CustomField>
    <fullName>FS_Force_Restore__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>Force Restore</description>
    <label>Force Restore</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>