force-app/main/default/objects/FS_OD_Settings__c/fields/FS_OD_RecId__c.field-meta.xml
<CustomField>
    <fullName>FS_OD_RecId__c</fullName>
    <description>OD Record ID</description>
    <label>OD RecID</label>
    <referenceTo>FS_Outlet_Dispenser__c</referenceTo>
    <relationshipLabel>OD Settings</relationshipLabel>
    <relationshipName>Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>