force-app/main/default/objects/FS_OD_Settings__c/fields/FS_Start_Install_Window_Verified__c.field-meta.xml
<CustomField>
    <fullName>FS_Start_Install_Window_Verified__c</fullName>
    <label>Auto Installation Time Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>