force-app/main/default/objects/FS_OD_Settings__c/fields/FS_Valid_Fill_Enabled__c.field-meta.xml
<CustomField>
    <fullName>FS_Valid_Fill_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valid Fill Enabled</label>
    <type>Checkbox</type>
</CustomField>