force-app/main/default/objects/FS_OD_Settings__c/fields/FS_Valid_Fill_Enabled_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>FS_Valid_Fill_Enabled_Updated_On__c</fullName>
    <label>Valid Fill Enabled Updated On</label>
    <type>DateTime</type>
</CustomField>