force-app/main/default/objects/FS_OD_Settings__c/fields/FS_Valid_Fill_Enabled_Updt_By__c.field-meta.xml
<CustomField>
    <fullName>FS_Valid_Fill_Enabled_Updt_By__c</fullName>
    <label>Valid Fill Enabled Updt By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>