force-app/main/default/objects/FS_OD_Settings__c/fields/Ice_Type__c.field-meta.xml
<CustomField>
    <fullName>Ice_Type__c</fullName>
    <label>Ice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>hard</fullName>
            </value>
            <value>
                <fullName>soft</fullName>
            </value>
            <value>
                <fullName>scotsman</fullName>
            </value>
            <value>
                <fullName>hoshizaki</fullName>
            </value>
            <value>
                <fullName>follet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>