force-app/main/default/objects/FS_OD_Settings__c/fields/Ice_Type_Last_Updt_By__c.field-meta.xml
<CustomField>
    <fullName>Ice_Type_Last_Updt_By__c</fullName>
    <description>Ice Type Last Updt By</description>
    <label>Ice Type Last Updt By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>