force-app/main/default/objects/FS_OD_Settings__c/fields/Ice_Type_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Ice_Type_Updated_On__c</fullName>
    <label>Ice Type Updated On</label>
    <type>DateTime</type>
</CustomField>