force-app/main/default/objects/FS_OD_Settings__c/fields/Microphone_Enable_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Microphone_Enable_Updated_on__c</fullName>
    <label>Microphone Enable Updated on</label>
    <type>DateTime</type>
</CustomField>