force-app/main/default/objects/FS_OD_Settings__c/fields/Microphone_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Microphone_Enabled__c</fullName>
    <defaultValue>&quot;Yes&quot;</defaultValue>
    <label>Microphone Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>