force-app/main/default/objects/FS_OD_Settings__c/fields/Proximity_Sensor_Enable_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>Proximity_Sensor_Enable_Last_Updtd_By__c</fullName>
    <label>Proximity Sensor Enable Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>