force-app/main/default/objects/FS_OD_Settings__c/fields/Proximity_Sensor_Enable_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Proximity_Sensor_Enable_Updated_on__c</fullName>
    <label>Proximity Sensor Enable Updated on</label>
    <type>DateTime</type>
</CustomField>