force-app/main/default/objects/FS_OD_Settings__c/fields/Proximity_Sensor_Enable_Verified__c.field-meta.xml
<CustomField>
    <fullName>Proximity_Sensor_Enable_Verified__c</fullName>
    <label>Proximity Sensor Enable Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>