force-app/main/default/objects/FS_OD_Settings__c/fields/Revoke_Artifacts__c.field-meta.xml
<CustomField>
    <fullName>Revoke_Artifacts__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <label>Revoke Artifacts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Revoke Now</fullName>
            </value>
            <value>
                <fullName>Revoke At Next Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>