force-app/main/default/objects/FS_OD_Settings__c/fields/Revoke_Artifacts_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Revoke_Artifacts_Updated_By__c</fullName>
    <label>Revoke Artifacts Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>