force-app/main/default/objects/FS_OD_Settings__c/fields/Revoke_Artifacts_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Revoke_Artifacts_Updated_On__c</fullName>
    <label>Revoke Artifacts Updated On</label>
    <type>DateTime</type>
</CustomField>