force-app/main/default/objects/FS_OD_Settings__c/fields/Screen_Attract_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Screen_Attract_Enabled__c</fullName>
    <defaultValue>&quot;Yes&quot;</defaultValue>
    <label>Screen Attract Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>