force-app/main/default/objects/FS_OD_Settings__c/fields/Screen_Attract_Enabled_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>Screen_Attract_Enabled_Last_Updtd_By__c</fullName>
    <label>Screen Attract Enabled Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>