force-app/main/default/objects/FS_OD_Settings__c/fields/Screen_Attract_Enabled_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Screen_Attract_Enabled_Updated_on__c</fullName>
    <label>Screen Attract Enabled Updated on</label>
    <type>DateTime</type>
</CustomField>