force-app/main/default/objects/FS_OD_Settings__c/fields/Screen_Idle_To_Attract_Ms__c.field-meta.xml
<CustomField>
    <fullName>Screen_Idle_To_Attract_Ms__c</fullName>
    <defaultValue>360000</defaultValue>
    <label>Screen Idle To Attract (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>