force-app/main/default/objects/FS_OD_Settings__c/fields/Screen_Idle_To_Attract_Ms_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>Screen_Idle_To_Attract_Ms_Last_Updtd_By__c</fullName>
    <label>Screen Idle To Attract Ms Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>