force-app/main/default/objects/FS_OD_Settings__c/fields/Screen_Idle_To_Attract_Ms_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Screen_Idle_To_Attract_Ms_Updated_On__c</fullName>
    <label>Screen Idle To Attract Ms Updated On</label>
    <type>DateTime</type>
</CustomField>