force-app/main/default/objects/FS_OD_Settings__c/fields/Screen_Idle_to_Home_After_Pour__c.field-meta.xml
<CustomField>
    <fullName>Screen_Idle_to_Home_After_Pour__c</fullName>
    <defaultValue>8000</defaultValue>
    <label>Screen Idle to Home After Pour (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>