force-app/main/default/objects/FS_OD_Settings__c/fields/Screen_Idle_to_Home_After_Pour_Updtd_On__c.field-meta.xml
<CustomField>
    <fullName>Screen_Idle_to_Home_After_Pour_Updtd_On__c</fullName>
    <label>Screen Idle to Home After Pour Updtd On</label>
    <type>DateTime</type>
</CustomField>