force-app/main/default/objects/FS_OD_Settings__c/fields/Screen_Idle_to_Home_After_Pour_Verified__c.field-meta.xml
<CustomField>
    <fullName>Screen_Idle_to_Home_After_Pour_Verified__c</fullName>
    <label>Screen Idle to Home After Pour Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>