force-app/main/default/objects/FS_OD_Settings__c/fields/Screen_Idle_To_Low_Power_Ms_Last_Uptd_By__c.field-meta.xml
<CustomField>
    <fullName>Screen_Idle_To_Low_Power_Ms_Last_Uptd_By__c</fullName>
    <label>Screen Idle To Low Power Ms Last Uptd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>