force-app/main/default/objects/FS_OD_Settings__c/fields/Service_Mode__c.field-meta.xml
<CustomField>
    <fullName>Service_Mode__c</fullName>
    <label>Service Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Serve</fullName>
            </value>
            <value>
                <fullName>Crew Serve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>