force-app/main/default/objects/FS_OD_Settings__c/fields/Service_Mode_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Service_Mode_Updated_By__c</fullName>
    <label>Service Mode Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>