force-app/main/default/objects/FS_OD_Settings__c/fields/Service_Mode_Updated_On__c.field-meta.xml
<CustomField>
    <fullName>Service_Mode_Updated_On__c</fullName>
    <label>Service Mode Updated On</label>
    <type>DateTime</type>
</CustomField>