force-app/main/default/objects/FS_OD_Settings__c/fields/Speaker_Enable_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Enable_Last_Updtd_By__c</fullName>
    <label>Speaker Enable Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>