force-app/main/default/objects/FS_OD_Settings__c/fields/Speaker_Enable_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Enable_Updated_on__c</fullName>
    <label>Speaker Enable Updated on</label>
    <type>DateTime</type>
</CustomField>