force-app/main/default/objects/FS_OD_Settings__c/fields/Start_Install_Window__c.field-meta.xml
<CustomField>
    <fullName>Start_Install_Window__c</fullName>
    <defaultValue>(&quot;2:00 AM&quot;)</defaultValue>
    <label>Auto Installation Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>