force-app/main/default/objects/FS_OD_Settings__c/fields/Start_Install_Window_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>Start_Install_Window_Last_Updtd_By__c</fullName>
    <label>Auto Installation Time Last Updtd By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>