force-app/main/default/objects/FS_OD_Settings__c/fields/Start_Install_Window_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Start_Install_Window_Updated_on__c</fullName>
    <label>Auto Installation Time Updated on</label>
    <type>DateTime</type>
</CustomField>