force-app/main/default/objects/FS_OD_Settings__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>TimeZone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>America/Anchorage</fullName>
            </value>
            <value>
                <fullName>America/Boise</fullName>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
            </value>
            <value>
                <fullName>America/Denver</fullName>
            </value>
            <value>
                <fullName>America/Detroit</fullName>
            </value>
            <value>
                <fullName>America/Fort_Wayne</fullName>
            </value>
            <value>
                <fullName>America/Indianapolis</fullName>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
            </value>
            <value>
                <fullName>America/Louisville</fullName>
            </value>
            <value>
                <fullName>America/New_York</fullName>
            </value>
            <value>
                <fullName>America/Puerto_Rico</fullName>
            </value>
            <value>
                <fullName>Pacific/Samoa</fullName>
            </value>
            <value>
                <fullName>UTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>