force-app/main/default/objects/FS_OD_Settings__c/fields/Time_Zone_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Updated_By__c</fullName>
    <label>TimeZone Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>