force-app/main/default/objects/FS_OD_Settings__c/fields/Time_Zone_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Updated_on__c</fullName>
    <label>TimeZone Updated on</label>
    <type>DateTime</type>
</CustomField>