force-app/main/default/objects/FS_OD_Settings__c/fields/Time_Zone_Verified__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone_Verified__c</fullName>
    <label>TimeZone Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>