force-app/main/default/objects/FS_OD_Settings__c/fields/To_Ambient_Msec__c.field-meta.xml
<CustomField>
    <fullName>To_Ambient_Msec__c</fullName>
    <defaultValue>300000</defaultValue>
    <label>Screen Idle to Ambient (ms)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>