force-app/main/default/objects/FS_OD_Settings__c/fields/To_Ambient_Msec_Last_Updtd_By__c.field-meta.xml
<CustomField>
    <fullName>To_Ambient_Msec_Last_Updtd_By__c</fullName>
    <label>Screen Idle to Ambient Last Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>