force-app/main/default/objects/FS_OD_Settings__c/fields/To_Ambient_Msec_Updated_on__c.field-meta.xml
<CustomField>
    <fullName>To_Ambient_Msec_Updated_on__c</fullName>
    <label>Screen Idle to Ambient (ms) Updated On</label>
    <type>DateTime</type>
</CustomField>