force-app/main/default/objects/FS_OD_Settings__c/fields/Water_Adjustment_Factor__c.field-meta.xml
<CustomField>
    <fullName>Water_Adjustment_Factor__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Water Adjustment Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>